# Contact-Manager

./: README.md  sample_contacts.csv  setup.cfg
src/contact_manager/: cli.py  csv_utils.py  db.py  models.py  repository.py
src/contact_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
