[metadata]
name = contact-manager
version = 0.1.0
description = Simple Contact Manager CLI (Postgres + SQLAlchemy + Click)
author = Kian Almasi

[options]
package_dir =
    = src
packages = find:
install_requires =
    SQLAlchemy>=1.4
    psycopg2-binary>=2.9
    click>=8.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    contact-manager = contact_manager.cli:cli
